# manifest-sbom-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
samples/: sample-cyclonedx-1.6.json
sbom_cli/: __init__.py  cli.py  db.py
sbom_cli/parsers/: __init__.py  cyclonedx.py  types.py
