[project]
name = "manifest-sbom-cli"
version = "0.1.0"
description = "Ingest CycloneDX and SPDX 3.0 SBOMs into SQLite and query them by component or license."
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12",
    "sqlmodel>=0.0.22",
]

[project.scripts]
sbom-cli = "sbom_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sbom_cli"]