[project]
name = "manifest-sbom-cli"
version = "0.1.0"
description = "Ingest CycloneDX SBOMs into SQLite and query them by component or license."
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12",
    "sqlmodel>=0.0.22",
    "cyclonedx-python-lib>=8.0",
]

[project.scripts]
sbom-cli = "sbom_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sbom_cli"]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "black>=24.0",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py314"]
